<?xml version="1.0"?>
<package format="3">
  <name>slamware_ros_sdk</name>
  <version>1.0.0</version>
  <description>The slamware_ros_sdk package</description>

  <maintainer email="ros@slamtec.com">Slamtec Ros Maintainer</maintainer>
  <license>BSD</license>
  <url type="website">http://developer.slamtec.com/docs/slamware/ros-sdk/2.6.0_rtm/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>example_interfaces</depend>
  <depend>slamware_ros_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

<!--  <build_export_depend>nav_msgs</build_export_depend>-->
<!--  <build_export_depend>roscpp</build_export_depend>-->
<!--  <build_export_depend>rospy</build_export_depend>-->
<!--  <build_export_depend>sensor_msgs</build_export_depend>-->
<!--  <build_export_depend>std_msgs</build_export_depend>-->
<!--  <build_export_depend>tf</build_export_depend>-->
<!--  <exec_depend>nav_msgs</exec_depend>-->
<!--  <exec_depend>roscpp</exec_depend>-->
<!--  <exec_depend>rospy</exec_depend>-->
<!--  <exec_depend>sensor_msgs</exec_depend>-->
<!--  <exec_depend>std_msgs</exec_depend>-->
<!--  <exec_depend>tf</exec_depend>-->
<!--  <exec_depend>message_runtime</exec_depend>-->
</package>
